@@ -7,6 +7,8 @@ import java.io.InputStreamReader;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -20,13 +22,13 @@ import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 
 /**
- * @author nichen
- * date: 2017-08-27
+ * @author nichen date: 2017-08-27
  */
 public class MySqlDBUtil {
-	
+
 	/**
 	 * 获取数据库连接
+	 * 
 	 * @param host
 	 * @param port
 	 * @param user
@@ -44,19 +46,21 @@ public class MySqlDBUtil {
 		}
 		return con;
 	}
-	
+
 	/**
 	 * 获取数据库的基本信息
+	 * 
 	 * @param con
 	 * @return
 	 */
-	public static List<String> getBases(String host, String port, String user, String passwd){
+	public static Map<String, String> getBases(String host, String port, String user, String passwd) {
 		String cmd = "mysql " + "-h" + host + " -u" + user + " -p" + passwd + " -e status";
 		System.out.println(cmd);
-		List<String> infos = new ArrayList<String>();
+		Map<String, String> infoMap = new HashMap<String, String>();
 		try {
-//			Process process = Runtime.getRuntime().exec(cmd, null, Play.applicationPath);
-			Process process = Runtime.getRuntime().exec(new String[]{"/bin/sh", "-c", cmd});
+			Process process = Runtime.getRuntime().exec(cmd, null, Play.applicationPath);
+			// Process process = Runtime.getRuntime().exec(new String[]{"cmd",
+			// "-c", cmd});
 			int statusCode = process.waitFor();
 			if (statusCode == 0) {
 				InputStream inputStream = process.getInputStream();
@@ -65,12 +69,14 @@ public class MySqlDBUtil {
 				StringBuilder stringBuilder = new StringBuilder();
 				while ((line = bufferedReader.readLine()) != null) {
 					stringBuilder.append(line + "\n");
-					if(line.startsWith("msyql") || line.startsWith("Uptime")){
-						infos.add(line);
+					if (line.startsWith("msyql") || line.startsWith("Uptime")) {
+						String[] spliteds = line.split(":");
+						infoMap.put(spliteds[0].trim(), spliteds[1].trim());
 					} else if (line.startsWith("Threads")) {
-						String[] spliteds = line.split("  ");
-						for(String s : spliteds){
-							infos.add(s);
+						String[] categories = line.split("  ");
+						for (String s : categories) {
+							String[] spliteds = s.split(":");
+							infoMap.put(spliteds[0].trim(), spliteds[1].trim());
 						}
 					}
 				}
@@ -82,65 +88,87 @@ public class MySqlDBUtil {
 				InputStream errorInputStream = process.getErrorStream();
 				BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(errorInputStream));
 				String line = null;
-				StringBuilder stringBuilder = new StringBuilder();
 				while ((line = bufferedReader.readLine()) != null) {
-					stringBuilder.append(line + "\n");
 					Logger.error("%s", line);
 				}
 				errorInputStream.close();
 				bufferedReader.close();
-				Logger.error("错误信息: %s", stringBuilder.toString());
 			}
 		} catch (IOException e) {
 			e.printStackTrace();
-		} catch (InterruptedException e){
+		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
-		
-		return infos;
+
+		return infoMap;
 	}
-	
+
 	/**
 	 * 获取数据库的缓存信息
+	 * 
 	 * @param con
 	 * @return
 	 */
-	public static List<Map<String, String>> getCaches(Connection con) {
+	public static Map<String, String> getCaches(Connection con) {
+		Map<String, String> infoMap = new HashMap<String, String>();
 		String sql = "show variables like '%cache%'";
 		try {
 			PreparedStatement prep = con.prepareStatement(sql);
-			ResultSet set =  prep.executeQuery();
-			ResultSetMetaData metaData = set.getMetaData();
-			int columns = metaData.getColumnCount();
-			System.out.println(columns);
-			for(int i = 1; i <= columns; i++){
-				System.out.println(metaData.getColumnLabel(i));
+			ResultSet resultSet = prep.executeQuery();
+			while (resultSet.next()) {
+				infoMap.put(resultSet.getString("Variable_name"), resultSet.getString("Value"));
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
 		}
-		return null;
+		return infoMap;
 	}
-	
+
 	/**
 	 * 获取数据库的复制信息
+	 * 
 	 * @param con
 	 * @return
 	 */
-	public static List<Map<String, String>> getReplications(Connection con) {
-		String sql = "show slave status";
+	public static Map<String, String> getReplications(String host, String port, String user, String passwd) {
+		String cmd = "mysql " + "-h" + host + " -P" + port + " -u" + user + " -p" + passwd + " -e\"show slave status\\G\"";
+		System.out.println(cmd);
+		Map<String, String> infoMap = new HashMap<String, String>();
 		try {
-			PreparedStatement prep = con.prepareStatement(sql);
-			ResultSet set =  prep.executeQuery();
-			ResultSetMetaData metaData = set.getMetaData();
-			int columns = metaData.getColumnCount();
-			System.out.println(columns);
-			for(int i = 1; i <= columns; i++){
-				System.out.println(metaData.getColumnLabel(i));
+			Process process = Runtime.getRuntime().exec(cmd, null, Play.applicationPath);
+			// Process process = Runtime.getRuntime().exec(new String[]{"cmd",
+			// "-c", cmd});
+			int statusCode = process.waitFor();
+			if (statusCode == 0) {
+				InputStream inputStream = process.getInputStream();
+				BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(inputStream));
+				String line = null;
+				while ((line = bufferedReader.readLine()) != null) {
+					String[] spliteds = line.split(":");
+					if(spliteds.length == 2){
+						infoMap.put(spliteds[0].trim(), spliteds[1].trim());
+					}
+					
+				}
+				inputStream.close();
+				bufferedReader.close();
+			} else {
+				// 非正确退出,输出错误信息
+				InputStream errorInputStream = process.getErrorStream();
+				BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(errorInputStream));
+				String line = null;
+				while ((line = bufferedReader.readLine()) != null) {
+					Logger.error("%s", line);
+				}
+				errorInputStream.close();
+				bufferedReader.close();
 			}
-		} catch (Exception e) {
+		} catch (IOException e) {
+			e.printStackTrace();
+		} catch (InterruptedException e) {
 			e.printStackTrace();
 		}
-		return null;
+
+		return infoMap;
 	}
 }
